<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F2C34">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/firstLinearLayout"
                android:layout_width="@dimen/_108sdp"
                android:layout_height="wrap_content"
                android:background="#1F2C34"
                android:orientation="vertical">

                <!-- Accessories TextView with padding -->
                <TextView
                    android:id="@+id/Accessories"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:textStyle="bold"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/Accessories" />

                <!-- Divider Line below Accessories -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:background="@color/gray" />

                <!-- T_Shirts TextView with padding -->
                <TextView
                    android:id="@+id/T_Shirts"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:textStyle="bold"
                    android:textSize="@dimen/_10ssp"
                    android:text="T_Shirts" />

                <!-- Divider Line below T_Shirts -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:background="@color/gray" />

                <!-- Bakewear TextView with padding -->

                <!-- Divider Line below Bakewear -->
                <TextView
                    android:id="@+id/Bakewear"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:gravity="center"
                    android:text="@string/bakewear"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:background="@color/gray" />

                <!-- HandBag TextView with padding -->
                <TextView
                    android:id="@+id/HandBag"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:textStyle="bold"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/handbag" />

                <!-- Divider Line below HandBag -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:background="@color/gray" />

                <!-- HomeKitchen TextView with padding -->
                <TextView
                    android:id="@+id/HomeKitchen"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/home_kitchen" />

                <!-- Divider Line below HomeKitchen -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:background="#E0E0E0" />

                <!-- WinterShoes TextView with padding -->
                <TextView
                    android:id="@+id/wintershoes"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/winter_shoes" />

                <!-- Divider Line below WinterShoes -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:background="@color/gray" />

                <!-- Women TextView with padding -->
                <TextView
                    android:id="@+id/Women"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/women" />

                <!-- Divider Line below Women -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:background="@color/gray" />

                <!-- Men TextView with padding -->
                <TextView
                    android:id="@+id/Men"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:textStyle="bold"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/men" />

                <!-- Divider Line below Men -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:background="@color/gray" />

            </LinearLayout>
        </ScrollView>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#334755"
                android:layout_margin="@dimen/_12sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="8dp"
                    android:backgroundTint="#334755"
                    android:text="Special Offers"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/specialOffersRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"
                    tools:listitem="@layout/category_design_layout" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/_12sdp"
                android:orientation="vertical"
                android:background="#334755"
                tools:listitem="@layout/item_image">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="8dp"
                    android:text="New Products"
                    android:backgroundTint="#334755"
                    android:textColor="@android:color/white"

                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/newProductsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3"
                    tools:listitem="@layout/category_design_layout" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


</LinearLayout>


    <!--
        <LinearLayout
            android:id="@+id/secondLinearLayout"
            android:layout_width="213dp"
            android:layout_height="191dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintStart_toEndOf="@id/firstLinearLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/thirdLinearLayout"
            android:layout_width="213dp"
            android:layout_height="191dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:background="@color/pinkColor"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintStart_toEndOf="@id/firstLinearLayout"
            app:layout_constraintTop_toBottomOf="@id/secondLinearLayout" />-->